--- a/yc-translator-core/build.gradle
+++ b/yc-translator-core/build.gradle
@@ -11,6 +11,7 @@ dependencies {
 	compile 'com.ai.slp.common:cache:1.0-SNAPSHOT'
 	compile 'com.ai.yc.ucenter:members:1.1.1-SNAPSHOT'
 	compile 'com.ai.slp.balance:accountmaintain:1.0-SNAPSHOT'
+	compile 'com.ai.yc.common:country:1.0-SNAPSHOT'
     testCompile(
             "org.springframework:spring-test:4.1.7.RELEASE",
             "junit:junit:4.12"
