--- a/yc-translator-core/src/main/resources/dubbo/dubbo.properties
+++ b/yc-translator-core/src/main/resources/dubbo/dubbo.properties
@@ -1,11 +1,11 @@
-dubbo.appname=yc-user
+dubbo.appname=yc-translator
 dubbo.registry.protocol=zookeeper
 dubbo.registry.address=10.19.13.23:29181
 #dubbo.registry.address=127.0.0.1:29181
 dubbo.registry.file=../logs/registry/user-dubbo-registry.cache
 
 dubbo.protocol=rest
-yc.user.dubbo.port=10884
+yc.user.dubbo.port=10887
 dubbo.provider.timeout=200000
 dubbo.protocol.server=tomcat
-dubbo.protocol.contextpath=yc-user
+dubbo.protocol.contextpath=yc-translator
