--- a/yc-translator-api/build.gradle
+++ b/yc-translator-api/build.gradle
@@ -57,7 +57,7 @@ for(Map<String,String> apiMap:apiList){
         baseName apiArtifactId
         from sourceSets.main.output
         destinationDir file("$buildDir/api-libs")
-        include 'com/ai/yc/user/api/'+apiName+'/**'
+        include 'com/ai/yc/translator/api/'+apiName+'/**'
         manifest {
             attributes 'artifactId': apiArtifactId, 'Built-By': builtBy,'Built-date': new Date().format('yyyy-MM-dd HH:mm:ss'),'Manifest-Version':apiVersion
         }
@@ -67,7 +67,7 @@ for(Map<String,String> apiMap:apiList){
     def apidocTask=task("${apiArtifactId}APIDoc",type:com.ai.runner.gradle.plugin.APICollectorTask){
     	//dependsOn apiJarProcessTask
         esconfig = "{\"clusterName\":\"elasticsearch_for_sol\",\"ip\":\"10.1.234.160\", \"port\":14999}"
-        source = fileTree(dir: 'src/main/java', include: 'com/ai/yc/user/api/'+apiName+'/**/*.java')+fileTree(dir:"$buildDir/opt-base", include:"**/*.java")
+        source = fileTree(dir: 'src/main/java', include: 'com/ai/yc/translator/api/'+apiName+'/**/*.java')+fileTree(dir:"$buildDir/opt-base", include:"**/*.java")
         docletpath = configurations.jaxDoclet.files.asType(List)
         docletClass = 'com.ai.runner.apicollector.doclet.APIDoclet'
         memberLevel = 'private'
@@ -76,7 +76,7 @@ for(Map<String,String> apiMap:apiList){
         belong='yc-translator'
         ownerType='yc'
         owner = 'yc-translator'
-        groupId = 'com.ai.yc.user'
+        groupId = 'com.ai.yc.translator'
         artifactId = apiArtifactId
         version = apiVersion
     }
