--- a/yc-translator-core/src/main/resources/dubbo/dubbo.properties
+++ b/yc-translator-core/src/main/resources/dubbo/dubbo.properties
@@ -5,7 +5,7 @@ dubbo.registry.address=10.19.13.23:29181
 dubbo.registry.file=../logs/registry/user-dubbo-registry.cache
 
 dubbo.protocol=rest
-yc.user.dubbo.port=10887
+yc.translator.dubbo.port=10887
 dubbo.provider.timeout=200000
 dubbo.protocol.server=tomcat
 dubbo.protocol.contextpath=yc-translator
